# python-wfirma

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
src/wfirma/: __init__.py  handler.py  models.py
tests/: __init__.py  test_main.py
